Updated machine translations

--- a/shared/locales/src/machine-en.json
+++ b/shared/locales/src/machine-en.json
@@ -22180,8 +22180,8 @@
     "translation": "Reject"
   },
   "feae4831-c229-4b2a-8dc1-c65184cbdfec": {
-    "original": "Hier vind je een historiek van alle communicatie die werd verzonden. Wil je graag een bericht versturen, selecteer dan via het tabblad 'leden' of 'bestellingen' alle leden of bestellingen waar je naar wilt mailen.",
-    "translation": "Here you will find a history of all sent communication. To send a message, go to the 'members' or 'orders' tab and select all the members or orders you want to email."
+    "original": "Hier vind je een overzicht van alle verzonden berichten. Wil je graag een bericht versturen? Ga dan naar de leden of bestellingen die je wilt contacteren, maak eventueel een selectie, en klik bovenaan op het enveloppe-icoontje.",
+    "translation": "Here you can find an overview of all sent messages. Would you like to send a message? Go to the members or orders you want to contact, make a selection if needed, and click the envelope icon at the top."
   },
   "feaf0054-1b99-4526-821e-3c63e64574a0": {
     "original": "Tot en met",
