--- a/shared/locales/src/machine-fr.json
+++ b/shared/locales/src/machine-fr.json
@@ -22516,8 +22516,8 @@
     "translation": "Refuser"
   },
   "feae4831-c229-4b2a-8dc1-c65184cbdfec": {
-    "original": "Hier vind je een historiek van alle communicatie die werd verzonden. Wil je graag een bericht versturen, selecteer dan via het tabblad 'leden' of 'bestellingen' alle leden of bestellingen waar je naar wilt mailen.",
-    "translation": "Tu trouveras ici l’historique de toute la communication envoyée. Si tu souhaites envoyer un message, sélectionne les membres ou commandes auxquels tu veux écrire via l’onglet 'membres' ou 'commandes'."
+    "original": "Hier vind je een overzicht van alle verzonden berichten. Wil je graag een bericht versturen? Ga dan naar de leden of bestellingen die je wilt contacteren, maak eventueel een selectie, en klik bovenaan op het enveloppe-icoontje.",
+    "translation": "Vous trouverez ici un aperçu de tous les messages envoyés. Vous souhaitez envoyer un message ? Rendez-vous dans la section des membres ou des commandes que vous souhaitez contacter, faites éventuellement une sélection, puis cliquez en haut sur l'icône en forme d'enveloppe."
   },
   "feaf0054-1b99-4526-821e-3c63e64574a0": {
     "original": "Tot en met",
