--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -5750,5 +5750,6 @@
   "7bd45367-4d32-408d-80f8-83bcc120d1de": "Alle berichten die werden verzonden aan {firstName}.",
   "82a881a0-5666-4649-961a-c8f6c48177d0": "Toon berichten",
   "e8207525-275b-48c4-9282-199f17085175": "Bericht sturen",
-  "b2dffb50-f8b1-4211-83d2-49a7b4008508": "Je kan niet meerdere leden van verschillende verenigingen tegelijk uitschrijven."
+  "b2dffb50-f8b1-4211-83d2-49a7b4008508": "Je kan niet meerdere leden van verschillende verenigingen tegelijk uitschrijven.",
+  "208ae3f1-1720-4d79-96fd-5c05d97c9de0": "Bericht sturen"
 }
