--- a/shared/locales/src/jamboree/machine-fr.json
+++ b/shared/locales/src/jamboree/machine-fr.json
@@ -1015,6 +1015,10 @@
     "original": "Type eenheid",
     "translation": "Type d'unité"
   },
+  "b2dffb50-f8b1-4211-83d2-49a7b4008508": {
+    "original": "Je kan niet meerdere leden van verschillende eenheden tegelijk uitschrijven.",
+    "translation": "Vous ne pouvez pas désinscrire plusieurs membres de différentes unités en même temps."
+  },
   "b2e0df73-bf2c-421c-8feb-7bec5fe7d8c1": {
     "original": "Dit scoutsjaar is niet actief",
     "translation": "Cette année scoute n'est pas active"
