Replaced translation keys

--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -5751,5 +5751,7 @@
   "82a881a0-5666-4649-961a-c8f6c48177d0": "Toon berichten",
   "e8207525-275b-48c4-9282-199f17085175": "Bericht sturen",
   "b2dffb50-f8b1-4211-83d2-49a7b4008508": "Je kan niet meerdere leden van verschillende verenigingen tegelijk uitschrijven.",
-  "208ae3f1-1720-4d79-96fd-5c05d97c9de0": "Bericht sturen"
+  "208ae3f1-1720-4d79-96fd-5c05d97c9de0": "Bericht sturen",
+  "a13326af-afab-4159-a730-d41f9bcbaff3": "Enkel in e-mails",
+  "e3cca88f-3001-49fa-af16-2a7144b07216": "Inhoud die enkel zichtbaar is in e-mails, niet in het ledenportaal"
 }
