Updated machine translations

--- a/shared/locales/src/digit/machine-en.json
+++ b/shared/locales/src/digit/machine-en.json
@@ -1115,6 +1115,10 @@
     "original": "Groep bewerken",
     "translation": "Edit group"
   },
+  "e3cca88f-3001-49fa-af16-2a7144b07216": {
+    "original": "Inhoud die enkel zichtbaar is in e-mails, niet in ‘Mijn account’",
+    "translation": "Content that is only visible in emails, not in ‘My account’"
+  },
   "e43ca9ec-8495-48af-a6df-8327e6f33d85": {
     "original": "adres van je groep",
     "translation": "address of your group"
