--- a/shared/locales/src/digit/machine-fr.json
+++ b/shared/locales/src/digit/machine-fr.json
@@ -1315,6 +1315,10 @@
     "original": "E-mailadres is gevalideerd",
     "translation": "Adresse électronique validée"
   },
+  "e3cca88f-3001-49fa-af16-2a7144b07216": {
+    "original": "Inhoud die enkel zichtbaar is in e-mails, niet in ‘Mijn account’",
+    "translation": "Contenu visible uniquement dans les e-mails, pas dans « Mon compte »"
+  },
   "e43ca9ec-8495-48af-a6df-8327e6f33d85": {
     "original": "adres van je groep",
     "translation": "adresse de votre groupe"
