--- a/shared/locales/src/machine-en.json
+++ b/shared/locales/src/machine-en.json
@@ -13903,6 +13903,10 @@
     "original": "Wijzig de instellingen rond toestemming voor gegevensverzameling",
     "translation": "Change the settings regarding data collection permission"
   },
+  "a13326af-afab-4159-a730-d41f9bcbaff3": {
+    "original": "Enkel in e-mails",
+    "translation": "Only in emails"
+  },
   "a148463b-5ae7-44d8-9cac-20538fc95431": {
     "original": "Tweede ouder",
     "translation": "Second parent"
@@ -19786,6 +19790,10 @@
   "e3c3f519-562e-4ef4-b670-599ce4cb74ac": {
     "original": "Alle ontvangers zijn gefilterd wegens een hard bounce of spam",
     "translation": "All recipients have been filtered due to a hard bounce or spam"
+  },
+  "e3cca88f-3001-49fa-af16-2a7144b07216": {
+    "original": "Inhoud die enkel zichtbaar is in e-mails, niet in het ledenportaal",
+    "translation": "Content that is only visible in emails, not in the member portal"
   },
   "e3d3b76b-e18c-4351-b5af-87186ebabe86": {
     "original": "Enkel van lid zelf",
