Replaced translation keys

--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -5753,5 +5753,28 @@
   "b2dffb50-f8b1-4211-83d2-49a7b4008508": "Je kan niet meerdere leden van verschillende verenigingen tegelijk uitschrijven.",
   "208ae3f1-1720-4d79-96fd-5c05d97c9de0": "Bericht sturen",
   "a13326af-afab-4159-a730-d41f9bcbaff3": "Enkel in e-mails",
-  "e3cca88f-3001-49fa-af16-2a7144b07216": "Inhoud die enkel zichtbaar is in e-mails, niet in het ledenportaal"
+  "e3cca88f-3001-49fa-af16-2a7144b07216": "Inhoud die enkel zichtbaar is in e-mails, niet in het ledenportaal",
+  "2e79bf4a-878b-43b0-902b-9d080c8b7fdf": "Deze ontvanger bestaat niet",
+  "f3f837eb-d6f7-4c6e-9477-d566a03e09b1": "Deze ontvanger heeft het bericht al ontvangen. Herlaad indien nodig de pagina om de nieuwe status te bekijken.",
+  "8ee5ee3f-abb7-4120-a817-a81ff4935a73": "QR-code maken",
+  "a45d87bc-1abd-461d-bd9a-01eed92c3073": "Maak een QR-code voor je webshop.",
+  "2875962d-b4fb-4542-af69-4f26472459f2": "Maak code",
+  "84446271-fbd6-4d12-b4d0-f154ea860ee4": "Het versturen van deze e-mail was initieel mislukt (bv. geblokkeerd e-mailadres), maar het versturen werd daarna opnieuw geprobeerd en is nu wel gelukt.",
+  "8d94109e-6f86-45fe-8a73-f8bcf44fdbd3": "Deze ontvanger heeft zich na het ontvangen van deze e-mail uitgeschreven voor (een deel van) de e-mails die je verstuurt.",
+  "93fb5220-c5dc-4fdf-b014-52238288207c": "Blokkering opheffen",
+  "c5706725-504c-44e7-bb39-b29df279a345": "Dit e-mailadres is momenteel geblokkeerd",
+  "d04e6513-d40e-4888-8ea7-1b18c8721829": "Niet (meer) geblokkeerd",
+  "15f327f6-3f58-446f-8e23-2470883133ce": "Dit e-mailadres is momenteel niet (meer) geblokkeerd",
+  "9d9b843c-a417-401a-b7df-d93124a77628": "Opnieuw proberen versturen",
+  "dba438de-1978-4205-bdd3-9b7d953d2f0b": "Probeer de e-mail opnieuw te versturen naar deze ontvanger",
+  "ea396cc2-98a0-4147-bd60-7ed9e2f7c0ad": "Weet je zeker dat je deze e-mail opnieuw wilt proberen te versturen?",
+  "ed127618-9fac-448d-ae8c-04d6c582156e": "Ja, opnieuw proberen",
+  "89e57caf-d083-4efc-8a21-8e31aa86ea14": "De e-mail zal opnieuw in de wachtrij worden geplaatst om verstuurd te worden. Dit kan enkele minuten duren.",
+  "4726631f-67a0-4404-95bd-d963cf83ad70": "Dit kan enkele minuten duren...",
+  "f6edb2e7-47c7-455f-a4c5-c9602bac4ae9": "De e-mail is opnieuw verzonden",
+  "481709c6-71f0-499d-8d3d-c8843f37c71f": "Het is niet gelukt om het bericht opnieuw te versturen",
+  "24c3fee7-0709-4e61-91ec-a77010e6cee5": "Weet je zeker dat je dit emailadres wilt deblokkeren?",
+  "6f7e2f7f-c8ad-4ce4-8838-0d7ab855d72e": "Ja, deblokkeren",
+  "ea52e93e-6e9d-41d7-8b4c-9a5bc41440e7": "Zorg ervoor dat je enkel een e-mailadres deblokkeert als je zeker bent dat het probleem is opgelost en de persoon hierna geen spam meer zal melden.",
+  "4a1a3ddf-3ae9-41a8-933f-bf0ca4726c11": "{email} werd succesvol gedeblokkeerd"
 }
