--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -2262,7 +2262,7 @@
   "b91fa8bc-9922-49c5-b773-5190b5103c25": "Schakel over naar",
   "0289e748-906d-453a-b54f-dce6a0355da0": "Oeps, er zijn nog geen inschrijvingsgroepen gemaakt. Ga naar de instellingen en configureer jouw inschrijvingsgroepen.",
   "24b0cf4b-a0be-4d8c-bd75-c04648cdf570": "Deze categorie is onzichtbaar voor leden omdat activiteiten niet geactiveerd is",
-  "11ad3320-726c-434b-938a-923f20c9c59c": "De structuur van jouw leeftijdsgroepen blijft behouden, maar je moet zelf nog de prijs en datums goed zetten. Vergeet dit niet.",
+  "11ad3320-726c-434b-938a-923f20c9c59c": "De structuur van jouw leeftijdsgroepen blijft behouden (er wordt een éénmalige kopie gemaakt), maar je moet zelf nog de prijs en datums goed zetten. Vergeet dit niet.",
   "0ab03598-06c3-433b-a8c6-39daa3aa16f1": "Je kan nog steeds aan de gegevens van vorig jaar",
   "62536e62-9d62-429f-97d4-2605e738fc92": "Alle leiding en leden verliezen hun functies en moet je opnieuw instellen",
   "b66376fb-238e-42dd-aec6-f48b9ee2e215": "Nieuw werkjaar",
