Improved onboarding flow

--- a/shared/locales/src/nl-NL.json
+++ b/shared/locales/src/nl-NL.json
@@ -1,6 +1,6 @@
 {
   "shared": {
-    "Gemeente": "Woonplaats",
+    "Gemeente": "Plaats",
     "login": "Inloggen",
     "transferTypes": {
       "structured": "Betalingskenmerk"
